QPID-8282: [JMS AMQP 0-x] Remove use of javax.xml.bind.DatatypeConverter